Refactored views and merchant/remitter controllers Invoices first cut
