# payment-api/api/helpers/mobilePaymentsDB.js
@@ -43,20 +43,27 @@ function insertDesignDocs(db){
   var remitters = {
       "all_remitters": {
         "map": "function(doc) {\n  if(doc.remitterName){\n    emit(null, doc);\n  }\n}"
-    },
-    "remitter_by_mobileNumber": {
+      },
+      "remitters_by_mobileNumber": {
         "map": "function(doc) {\n  if(doc.remitterName){\n    emit(doc.mobileNumber, doc);\n  }\n}"
-    }
+      }
   };
   var merchants = {
       "all_merchants": {
         "map": "function(doc) {\n  if(doc.merchantName){\n    emit(null, doc);\n  }\n}"
-    },
-    "merchant_by_abn": {
+      },
+      "merchants_by_abn": {
         "map": "function(doc) {\n  if(doc.merchantName){\n    emit(doc.abn, doc);\n  }\n}"
-    }
+      }
   };
-  
+  var invoices = {
+      "invoices_by_invoice": {
+        "map": "function(doc) {\n  if(doc.invoice){\n    emit(doc.invoice, doc);\n  }\n}"
+      },
+      "invoices_by_status": {
+        "map": "function(doc) {\n  if(doc.invoice){\n    emit(doc.status, doc);\n  }\n}"
+      }
+  };
   db.insert({language: "javascript", views: remitters}, "_design/remitters", function(err, body, header){
     if (err) {
       console.log('[_design/remitters.insert] ', err.message);
@@ -74,6 +81,15 @@ function insertDesignDocs(db){
     console.log("[INF]", 'inserted _design/merchants')
     console.log(body);
   });
+
+  db.insert({language: "javascript", views: invoices}, "_design/invoices", function(err, body, header){
+    if (err) {
+      console.log('[_design/invoices.insert] ', err.message);
+      return;
+    }
+    console.log("[INF]", 'inserted _design/invoices')
+    console.log(body);
+  });
 };
 
 // Export definitions
@@ -84,15 +100,25 @@ function db(callback){
 };
 
 function merchantByABN(abn, callback){
-  _db.view("merchants", "merchant_by_abn", {key: abn}, callback);
+  _db.view("merchants", "merchants_by_abn", {key: abn}, callback);
 };
 
 function remitterByMobileNumber(mobileNumber, callback){
-  _db.view("remitters", "remitter_by_mobileNumber", {key: mobileNumber}, callback);
+  _db.view("remitters", "remitters_by_mobileNumber", {key: mobileNumber}, callback);
+};
+
+function invoicesByStatus(status, callback){
+  _db.view("invoices", "invoices_by_status", {key: status}, callback);
+};
+
+function invoicesByInvoice(invoice, callback){
+  _db.view("invoices", "invoices_by_invoices", {key: invoice}, callback);
 };
 
 module.exports = {
     db: db,
     remitterByMobileNumber: remitterByMobileNumber,
-    merchantByABN: merchantByABN
+    merchantByABN: merchantByABN,
+    invoicesByStatus: invoicesByStatus,
+    invoicesByInvoice: invoicesByInvoice
   };
